kuber-homeworks/2.3/z2/svc_ngnix_tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: deploy-nginx
  ports:
    - name: http-nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
